test/type-error-3.err.expect
test/type-error-3.ktn:3:1: error: cannot solve scalar type constraint [Char] (input to baq) = Char (type of x)
test/type-error-3.ktn:3:9: note: [Char] (input to baq) is from here
test/type-error-3.ktn:3:9: note: Char is from here
test/type-error-3.ktn:3:9: note: Char (type of x) is from here
